--- a/style/style.css
+++ b/style/style.css
@@ -25,24 +25,20 @@
 
 .header{
     max-width: 420px;
-    text-align: center;
-    margin: auto;
-   
+    text-align: center;  
 }
 
 .header__title{
-    /* max-width: 450px; */
-    font-size: clamp(1.4rem,3vw,1.8rem);
+    font-size: clamp(1.3rem,3vw,1.8rem);
     font-weight: 200;
 }
 .header__span{
-    /* max-width: 500px; */
-    font-size: clamp(1.4rem,3vw,1.8rem);
+    font-size: clamp(1.3rem,3vw,1.8rem);
     font-weight: 600;
 }
 
 .header__p{
-    font-size: 0.9rem;
+    font-size: 0.85rem;
     font-weight: 200;
     color: var(--Grayish-Blue);
     margin-top: 0.8rem;
@@ -50,7 +46,7 @@
 }
 
 .card{
-    max-width: 280px;
+    max-width: 290px;
     display: flex;
     flex-direction: column;
     border-radius: 3.5px;
@@ -91,12 +87,14 @@
 }
 
 @media (min-width: 1000px) {
-    .main{
-        /* flex-wrap: wrap;
-        display: flex;
-        flex-direction: row; */
-        max-width: 1000px;
+    .body{
+        height: 100vh;
+        justify-content: center;
+        align-items: center;
         margin: auto;
+    }
+    .main{
+        max-width: 1000px;
         display: grid;
         gap: 1.5rem;
         grid-template-columns: repeat(3,1fr);
